--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/incoherentaco'"
+                onclick="location.href='https://incoherentaco.github.io/pricing_panel'"
               >
                 Github
               </button>
