--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Pricing Panel Project</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -278,7 +278,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/incoherentaco'"
+                onclick="location.href='https://github.com/incoherentaco/pricing_panel'"
               >
                 Live Demo
               </button>
@@ -296,7 +296,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/incoherentaco'"
+                onclick="location.href='https://incoherentaco.github.io/pricing_panel'"
               >
                 Github
               </button>
