--- a/index.html
+++ b/index.html
@@ -268,17 +268,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Pricing Panel Project</h2>
+            <h2 class="experience-sub-title project-title">Price Panel Project</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://incoherentaco.github.io/'"
+                onclick="location.href='https://github.com/incoherentaco/pricing_panel'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/incoherentaco/pricing_panel'"
+                onclick="location.href='https://incoherentaco.github.io/pricing_panel/'"
               >
                 Live Demo
               </button>
@@ -351,7 +351,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:santini.briseno@gmail.com">santini.briseno@gmail.com</a></p>
+          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
